--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,10 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
+          by <a href="https://github.com/keijop">Keijo P</a>
+        </p>
+        <p>
+          Boilerplate by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
         </p>
       </div>
    </body>
